# pytest-visual-diff

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  run-tests.sh  setup.cfg  setup.py  tox.ini
scripts/: download-chromedriver.sh  download-geckodriver.sh  run-tests.sh
src/pytest_visual_diff/: __init__.py  capture.py  compare.py  plugin.py
tests/: conftest.py  helpers.py  pytest.ini  test_capture.py  test_compare.py  test_report.py  test_screenshot_path.py
