[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
# Mark all libraries as 3rdparty, unless otherwise specified
default_section=THIRDPARTY
known_first_party=pytest_visual_diff
known_test=helpers
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TEST,LOCALFOLDER

[flake8]
exclude = .git, .pytest_cache, .tox, .cache, .virtualenv, build
max-complexity = 5
